fix: layout shift

--- a/src/components/ProjectOverview/ProjectOverview.module.less
+++ b/src/components/ProjectOverview/ProjectOverview.module.less
@@ -102,7 +102,7 @@
   padding-left: 32px;
 }
 
-.boosterRewards {
+.boosterRewards.boosterRewards {
   display: flex;
   gap: 8px;
 }
